Fix custom CSS override by wrapping mod styles in CSS layers (#2)
* Initial plan

* Wrap mod CSS in layers to allow custom CSS to override


* Fix CSS syntax error - remove extra closing brace


* Update comments to clarify CSS layer priority behavior


---------

--- a/Chromium/css/custom-homework.css
+++ b/Chromium/css/custom-homework.css
@@ -1,3 +1,4 @@
+@layer mod-homework {
 sl-studiewijzer-week .week,
 sl-studiewijzer-dag {
     position: relative;
@@ -188,4 +189,5 @@ sl-studiewijzer-items.mod-added {
 
 .mod-homework-icon.mod-active, .mod-homework-icon:hover {
     background: var(--bg-elevated-strong);
+}
 }
